--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <a href="https://images.wallpaperscraft.com/image/field_grass_autumn_nature_top_view_90917_1920x1080.jpg">Природа</a>
 </p>
 <p>
-<a href="https://images.pexels.com/photos/818649/pexels-photo-818649.jpeg?cs=srgb&dl=blurred-background-flowers-metal-818649.jpg">Кольца 1</a>
+<a href="https://images.pexels.com/photos/818649/pexels-photo-818649.jpeg">Кольца 1</a>
 </p>
 <p>
 <a href="https://www.tomswallpapers.com/images/201503/tomswallpapers.com_12997.jpg">Кольца 2</a>
