--- a/index.html
+++ b/index.html
@@ -1,16 +1,113 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>Wedding day pictures</title>
+ <style type="text/css">
+ @keyframes fadey { 
+0% { opacity: 0; }
+15% { opacity: 1; }
+85% { opacity: 1; }
+100% { opacity: 0; }
+}
+body { 
+  font-family: Avenir, Arial, sans-serif; 
+  margin: 0;
+  font-size: 0;
+}
+figure#slideshow { 
+  width: 80%; 
+  margin: 0 auto; 
+  position: relative; 
+  border: 1px solid #fff;
+  cursor: pointer;
+}
+figure#slideshow img { 
+  position: absolute; 
+  left: 0; top: 0; 
+  width: 100%; height: auto; 
+  opacity: 0; 
+}
+figure#slideshow img:first-child { position: relative; }
+
+#container:fullscreen { 
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+  background: #fff; 
+}
+#container:-moz-full-screen figure, #container:-ms-full-screen figure, #container:-webkit-fullscreen figure, #container:fullscreen figure { 
+  width: 100%;
+  margin: 0 auto;
+  background: #fff; 
+}
+:-webkit-full-screen { 
+  width: 100%; height: 100%; 
+}
+*:-moz-full-screen { 
+  background: #fff; 
+}
+*:-webkit-full-screen { 
+  background: #fff; 
+}
+ </style>
+
+</head>
 <body>
-<h1>Wedding day pictures</h1>
-<p>
-<a href="https://images.wallpaperscraft.com/image/field_grass_autumn_nature_top_view_90917_1920x1080.jpg">Природа</a>
-</p>
-<p>
-<a href="https://images.pexels.com/photos/818649/pexels-photo-818649.jpeg">Кольца 1</a>
-</p>
-<p>
-<a href="https://www.tomswallpapers.com/images/201503/tomswallpapers.com_12997.jpg">Кольца 2</a>
-</p>
+
+<figure id="container" onclick="fullScreen(this)">
+  <figure id="slideshow">
+    <img src="https://images.wallpaperscraft.com/image/field_grass_autumn_nature_top_view_90917_1920x1080.jpg" alt>
+    <img src="https://images.pexels.com/photos/818649/pexels-photo-818649.jpeg" alt>
+    <img src="https://www.tomswallpapers.com/images/201503/tomswallpapers.com_12997.jpg" alt>
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/xf-3-fandicaff-tinkerbot.jpg" alt>
+  </figure>
+</figure>
+
 
 </body>
+<script>
+
+function cancelFullScreen() {
+    if (document.cancelFullScreen) {
+        document.cancelFullScreen();
+    } else if (document.mozCancelFullScreen) {
+        document.mozCancelFullScreen();
+    } else if (document.webkitCancelFullScreen) {
+        document.webkitCancelFullScreen();
+    } else if (document.msCancelFullScreen) {
+        document.msCancelFullScreen();
+    }
+    link = document.getElementById("container");
+    link.removeAttribute("onclick");
+    link.setAttribute("onclick", "fullScreen(this)");
+}
+
+function fullScreen(element) {
+    if (element.requestFullScreen) {
+        element.requestFullScreen();
+    } else if (element.webkitRequestFullScreen) {
+        element.webkitRequestFullScreen();
+    } else if (element.mozRequestFullScreen) {
+        element.mozRequestFullScreen();
+    }
+    link = document.getElementById("container");
+    link.removeAttribute("onclick");
+    link.setAttribute("onclick", "cancelFullScreen()");
+}
+
+window.onload = function() {
+  imgs = document.getElementById('slideshow').children;
+  interval = 8000;
+  currentPic = 0;
+  imgs[currentPic].style.webkitAnimation = 'fadey '+interval+'ms';
+  imgs[currentPic].style.animation = 'fadey '+interval+'ms';
+  var infiniteLoop = setInterval(function(){
+    imgs[currentPic].removeAttribute('style');
+    if ( currentPic == imgs.length - 1) { currentPic = 0; } else { currentPic++; }
+    imgs[currentPic].style.webkitAnimation = 'fadey '+interval+'ms';
+    imgs[currentPic].style.animation = 'fadey '+interval+'ms';
+  }, interval);
+}
+
+</script>
 </html>
