--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
   font-size: 0;
 }
 figure#slideshow { 
-  width: 80%; 
+  width: 100%; 
   margin: 0 auto; 
   position: relative; 
   border: 1px solid #fff;
@@ -23,8 +23,9 @@ figure#slideshow {
 }
 figure#slideshow img { 
   position: absolute; 
-  left: 0; top: 0; 
-  width: 100%; height: auto; 
+  left: 0; top: 0; right: 0;
+  height: 100%;
+  width: 100%;
   opacity: 0; 
 }
 figure#slideshow img:first-child { position: relative; }
@@ -59,7 +60,6 @@ figure#slideshow img:first-child { position: relative; }
     <img src="https://images.wallpaperscraft.com/image/field_grass_autumn_nature_top_view_90917_1920x1080.jpg" alt>
     <img src="https://images.pexels.com/photos/818649/pexels-photo-818649.jpeg" alt>
     <img src="https://www.tomswallpapers.com/images/201503/tomswallpapers.com_12997.jpg" alt>
-    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/xf-3-fandicaff-tinkerbot.jpg" alt>
   </figure>
 </figure>
 
