--- a/index.html
+++ b/index.html
@@ -57,9 +57,14 @@ figure#slideshow img:first-child { position: relative; }
 
 <figure id="container" onclick="fullScreen(this)">
   <figure id="slideshow">
-    <img src="https://images.wallpaperscraft.com/image/field_grass_autumn_nature_top_view_90917_1920x1080.jpg" alt>
-    <img src="https://images.pexels.com/photos/818649/pexels-photo-818649.jpeg" alt>
-    <img src="https://www.tomswallpapers.com/images/201503/tomswallpapers.com_12997.jpg" alt>
+  <img src="n6.jpg" alt>
+    <img src="r1.jpg" alt>
+	 <img src="n1.jpg" alt>
+	 <img src="n2.jpg" alt>
+    <img src="r2.jpg" alt>
+    <img src="n3.jpg" alt>
+	 <img src="n4.jpg" alt>
+	  <img src="n5.jpg" alt>
   </figure>
 </figure>
 
