--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ figure#slideshow img:first-child { position: relative; }
 	<img src="n1.jpg" alt>
     <img src="r2.jpg" alt>
 		<img src="n2.jpg" alt>
-    <img src="n3.jpg" alt>
+    <img src="n3.JPG" alt>
 	 <img src="n4.jpg" alt>
 	  <img src="n5.jpg" alt>
   </figure>
